--- a/src/index.scss
+++ b/src/index.scss
@@ -1480,7 +1480,6 @@ h3 > a {
   background-color: $color_secondary;
 }
 
-
 .custom-input {
   overflow: hidden;
   padding: 0 5px 0 15px;
@@ -1775,9 +1774,447 @@ div {
       }
     }
   }
+}
+
+.workshop-list-container {
+
+  & h4 {
+    color: $color_secondary;
+    text-align: left;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+
+  .workshop-banner {
+
+    &__image {
+      width: 100%;
+    }
+  }
+
+  & .workshop-list-body {
+    margin-top: 30px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    & .item-container {
+      padding: 20px;
+      max-width: 220px;
+      max-height: 200px;
+      background-color: white;
+      border: 1px solid #f1f1f1;
+      border-radius: 10px;
+      display: flex;
+      flex-direction: column;
+      text-decoration: none;
+
+      & .text {
+        color: #000000;
+        text-decoration: none;
+        font-weight: bold;
+
+      }
+
+      &:hover {
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      }
+    }
+
+    @media screen and (max-width: 1000px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      & .item-container {
+        display: flex;
+        max-width: 100%;
+        width: 90%;
+        margin: 10px 0 10px 0;
+        flex-direction: row;
+        align-items: center;
+        text-align: left;
+
+        & img {
+          object-fit: contain;
+          margin-right: 40px;
+        }
+
+        @media screen and (max-width: 500px) {
+
+          & p {
+            font-size: 10px;
+          }
+          & img {
+            max-width: 100px;
+            margin-right: 20px;
+          }
+        }
+      }
+    }
+  }
 
 }
 
+.workshop-item {
+
+  & h4 {
+    color: $color_secondary;
+    text-align: left;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 20px;
+
+
+    @media screen and (max-width: 1000px) {
+      text-align: center;
+    }
+  }
+
+  & .workshop-item-description {
+    text-align: left;
+    color: $color_label;
+
+    & ul, li {
+      color: $color_label
+    }
+
+    @media screen and (max-width: 1000px) {
+      text-align: center;
+    }
+  }
+
+  & .workshop-item-advantages {
+    margin: 50px 0 50px 0;
+    width: 100%;
+    border-radius: 10px;
+    background-color: #f8f7f6;
+    padding: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    & .advantages {
+      text-transform: uppercase;
+      color: $color_secondary;
+      font-weight: 800;
+      margin: 0;
+    }
+
+
+    & .advantage-list-item {
+      display: flex;
+      align-items: center;
+
+      & .advantage-item-image {
+        background-color: white;
+        padding: 10px;
+        border-radius: 50%;
+        margin-right: 10px;
+      }
+
+      & p {
+        color: $color_label;
+        margin-bottom: 0;
+      }
+    }
+
+
+    @media screen and (max-width: 1000px) {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      border-radius: 0;
+
+      & p {
+        padding-bottom: 20px;
+      }
+
+      & .advantage-list-item {
+        display: flex;
+        justify-content: center;
+        width: 50%;
+
+        & .advantage-item-image {
+          background-color: white;
+          padding: 10px;
+          display: flex;
+          justify-content: flex-end;
+          align-items: flex-end;
+          margin-right: 10px;
+        }
+
+        & p {
+          width: 50%;
+          text-align: left;
+        }
+      }
+    }
+
+  }
+
+  & .workshop-item-materials {
+
+    margin-bottom: 50px;
+
+    & .materials-header {
+      display: flex;
+      align-items: center;
+
+      & h4 {
+        margin: 0 0 0 10px;
+      }
+
+      & hr {
+        width: 82%;
+        margin-bottom: 0;
+      }
+
+      & img {
+        object-fit: contain;
+      }
+
+      @media screen and (max-width: 1000px) {
+        text-align: center;
+
+        & h4 {
+          width: 100%;
+          text-align: center;
+        }
+      }
+    }
+
+    & .materials-body {
+      width: 100%;
+
+      & .material-list-item {
+        display: flex;
+        align-items: center;
+        margin: 20px 0 20px 0;
+        max-height: 200px;
+
+        & .material-item-description {
+          margin-left: 20px;
+          text-align: left;
+          display: flex;
+          flex-direction: column;
+
+          & h5 {
+            margin-bottom: 20px;
+            font-weight: bold;
+          }
+
+          & p {
+            color: $color_label
+          }
+        }
+      }
+    }
+  }
+
+
+  @media screen and (max-width: 1000px) and (min-width: 700px) {
+    & .materials-body {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+
+      & .material-list-item {
+        display: flex;
+        justify-content: space-between;
+        width: 50%;
+        border: 1px solid $color_lite;
+        border-radius: 10px;
+      }
+
+      & div {
+        width: 50%;
+      }
+    }
+  }
+
+  @media screen and (max-width: 700px) {
+
+    & .materials-body {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+
+      & .material-list-item {
+        display: flex;
+        justify-content: space-between;
+        width: 90%;
+        border: 1px solid $color_lite;
+        border-radius: 10px;
+      }
+
+      & div {
+        width: 90%;
+      }
+    }
+  }
+
+  & .workshop-item-examples {
+    width: 100%;
+    padding: 0;
+    margin-bottom: 50px;
+
+    & img {
+      padding: 10px;
+
+      @media screen and (max-width:1000px){
+          max-width: 90%;
+      }
+    }
+  }
+
+  & .workshop-item-size {
+
+    & p {
+      text-align: left;
+      margin: 20px 0 20px 0;
+      color: $color_label
+    }
+
+    & .size-header {
+      display: flex;
+      align-items: center;
+
+      & h4 {
+        margin: 0 0 0 10px;
+      }
+
+      & hr {
+        width: 82%;
+        margin-bottom: 0;
+      }
+
+      & img {
+        object-fit: contain;
+      }
+    }
+
+    & .size-body {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      & .size-list-item {
+        display: flex;
+        align-items: center;
+        margin: 20px 0 20px 0;
+
+        & .size-item-description {
+          text-align: left;
+          display: flex;
+          flex-direction: column;
+
+          & h5 {
+            margin-bottom: 20px;
+            font-weight: bold;
+          }
+
+          & p {
+            margin: 0;
+            color: $color_label;
+            padding-right: 20px;
+          }
+        }
+      }
+    }
+
+    @media screen and (max-width: 1000px) and (min-width: 700px) {
+
+      & .size-header {
+        width: 100%;
+
+        & h4 {
+          width: 100%;
+          text-align: center;
+        }
+      }
+
+      & p {
+        text-align: center;
+      }
+
+      & .size-body {
+        display: flex;
+        flex-direction: column;
+
+        & .size-list-item {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 50%;
+          border-bottom: 1px solid $color_lite;
+          border-top: 1px solid $color_lite;
+          padding: 10px 0 10px 0;
+          margin: 0;
+
+          & h5 {
+            width: 100%;
+            text-align: center;
+            font-weight: bold;
+          }
+        }
+      }
+    }
+
+    @media screen and (max-width: 700px) {
+
+      & h4 {
+        width: 100%;
+        text-align: center;
+      }
+      & p {
+        text-align: center;
+      }
+
+      & h5 {
+        width: 100%;
+        text-align: center;
+      }
+
+      & .size-body {
+        display: flex;
+        flex-direction: column;
+
+        & .size-list-item {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          border: 1px solid $color_lite;
+          padding: 10px 0 10px 0;
+          margin: 0;
+
+        }
+      }
+    }
+  }
+
+  & .workshop-item-order {
+    margin: 50px 0 50px 0;
+    width: 100%;
+    border-radius: 10px;
+    background-color: #f8f7f6;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+
+    & p {
+      margin-left: 20px;
+      color: $color_secondary;
+      font-weight: bold;
+      margin-bottom: 0;
+    }
+  }
+
+}
 
 .dropdown-share {
   & .dropdown-menu {
@@ -2000,28 +2437,6 @@ div {
   }
 }
 
-.main-catalog-list {
-  border: 1px solid #c7c7c7;
-  max-width: 400px;
-
-  &__item {
-    text-align: left;
-    padding: 0 1rem;
-    border-bottom: 1px solid #c7c7c7;
-
-    & .main-catalog-list__text {
-      color: #000000;
-      line-height: 1.8rem;
-      text-transform: uppercase;
-      font-weight: 300;
-
-    }
-
-    &:hover {
-      box-shadow: 0 0 2px 1px #c7c7c7;
-    }
-  }
-}
 
 .btn {
   margin-left: 10px;
@@ -2054,10 +2469,10 @@ div {
   color: $color_label;
   font-weight: normal;
 
-    &:hover {
-      color: #b3a501;
-      text-decoration: none;
-    }
+  &:hover {
+    color: #b3a501;
+    text-decoration: none;
+  }
 }
 
 nav.navbar {
@@ -2169,14 +2584,6 @@ nav.navbar {
   max-width: 10vw;
 }
 
-.workshop-banner {
-
-  &__image {
-    max-width: 800px;
-    width: 100%;
-    object-fit: contain;
-  }
-}
 
 .editorClassName {
   height: 30vh !important;
